--- a/Resources/Prototypes/Magic/projectile_spells.yml
+++ b/Resources/Prototypes/Magic/projectile_spells.yml
@@ -13,5 +13,5 @@
     state: fireball
   serverEvent: !type:ProjectileSpellEvent
     prototype: ProjectileFireball
-    posData: !type:TargetCasterPos
+    posData: !type:TargetInFront
     speech: action-speech-spell-fireball
